# kinetic-zsh-prompt

./: Cargo.toml  README.md  kinetic-zsh-prompt.plugin.zsh
