[package]
name = "kinetic-zsh-prompt"
version = "0.1.0"
authors = ["Sebastian Gniazdowski <sgniazdowski@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A fast and animated Zsh prompt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
