[package]
name = "kinetic-zsh-prompt"
version = "0.1.1"
authors = ["Sebastian Gniazdowski <sgniazdowski@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A fast and animated Zsh prompt"
repository = "https://github.com/zdharma/kinetic-zsh-prompt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
